Updated plugin to new ApiManager Version